--- a/DrizzleDrop/app/src/main/res/values/strings.xml
+++ b/DrizzleDrop/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="action_settings">Settings</string>
     <string name="yahooClientId">dj0yJmk9U0xEWVVpYXlmUGxaJmQ9WVdrOVRVZHhhamgxTkdNbWNHbzlNQS0tJnM9Y29uc3VtZXJzZWNyZXQmeD04Ng--</string>
     <string name="yahooClientSecret">04949a1ce82e7e7074a47be4eccb650537d3756a</string>
+    <string name="selectPlace">Please select a location</string>
+    <string name="selectPlaceTitle">Location</string>
 </resources>
