Added new screen and connected it

--- a/DrizzleDrop/app/src/main/res/values/strings.xml
+++ b/DrizzleDrop/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
         <item>Exchange Place</item>
     </string-array>
     <string name="location">Click to select location</string>
+    <string name="title_activity_delay_calc">Calculated Delay</string>
 </resources>
