--- a/DrizzleDrop/app/src/main/res/values/strings.xml
+++ b/DrizzleDrop/app/src/main/res/values/strings.xml
@@ -3,8 +3,6 @@
     <string name="action_settings">Settings</string>
     <string name="yahooClientId">dj0yJmk9U0xEWVVpYXlmUGxaJmQ9WVdrOVRVZHhhamgxTkdNbWNHbzlNQS0tJnM9Y29uc3VtZXJzZWNyZXQmeD04Ng--</string>
     <string name="yahooClientSecret">04949a1ce82e7e7074a47be4eccb650537d3756a</string>
-    <string name="selectPlace">Please select a location</string>
-    <string name="selectPlaceTitle">Location</string>
     <string-array name="stops_array">
         <item>Newport</item>
         <item>Christopher Street</item>
@@ -22,4 +20,7 @@
     </string-array>
     <string name="location">Click to select location</string>
     <string name="title_activity_delay_calc">Calculated Delay</string>
+    <string name="title_activity_main">Select method of transport</string>
+    <string name="title_activity_date_and_loc_select">Select a date and location</string>
+    <string name="selectPlace">Select Location</string>
 </resources>
