--- a/DrizzleDrop/app/src/main/res/values/strings.xml
+++ b/DrizzleDrop/app/src/main/res/values/strings.xml
@@ -1,8 +1,6 @@
 <resources>
     <string name="app_name">DrizzleDrop</string>
     <string name="action_settings">Settings</string>
-    <string name="yahooClientId">dj0yJmk9U0xEWVVpYXlmUGxaJmQ9WVdrOVRVZHhhamgxTkdNbWNHbzlNQS0tJnM9Y29uc3VtZXJzZWNyZXQmeD04Ng--</string>
-    <string name="yahooClientSecret">04949a1ce82e7e7074a47be4eccb650537d3756a</string>
     <string-array name="stops_array">
         <item>Newport</item>
         <item>Christopher Street</item>
@@ -20,9 +18,7 @@
     </string-array>
     <string name="location">Click to select location</string>
     <string name="title_activity_delay_calc">Calculated Delay</string>
-    <string name="title_activity_main">Select method of transport</string>
+    <string name="title_activity_main">DrizzleDrop</string>
     <string name="title_activity_date_and_loc_select">Select a date and location</string>
     <string name="selectPlace">Select Location</string>
-    <string name="section_format">Hello World from section: %1$d</string>
-    <string name="title_activity_main2">Main2Activity</string>
 </resources>
